# sprdwatchroot-next

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
core/: file_io.cpp  file_io.h
